--- a/webComponent/css/window.css
+++ b/webComponent/css/window.css
@@ -13,6 +13,8 @@
 	right: 0;
 	background: rgba(0,0,0,0.3);
 }
+
+
 .window-closeBtn{
 	display: inline-block;
 	height:24px;
@@ -33,24 +35,28 @@
 	transform: scale(1.1) rotate(180deg);
 	
 }
-.window-btn{
-	position: absolute;
-	bottom: 10px;
+.btn{
+	/*position: absolute;*/
 	width: 100px;
-	left: 50%;
-	margin-left: -50px;
 	border: 1px solid #333333;
 	background: #FFFFFF;
 	height: 25px;
 	box-shadow: 0 0 2px rgba(0,0,0,0.5);
 	border-radius: 2px;
 	transition: all 0.2s;
-	
+	outline: 0;
+	/*bottom: 10px;*/
 }
-.window-btn:hover{
+.btn:hover{
 	background: #666;
 	color: #FFFFFF;
 }
+.window-btn{
+	position: absolute;
+	left: 50%;
+	margin-left: -50px;
+}
+
 .window-head{
 	height: 30px;
 	line-height: 30px;
@@ -59,9 +65,32 @@
 	text-align: center;
 }
 .window-content{
-	padding: 30px;
-	color: #333333;
+	padding: 20px;
+	color: #666;
 	
+}
+.window-content p{
+	margin: 0;
+	text-align: center;
+}
+.window-footer{
+	/*background: #000000;*/
+	position: absolute;
+	width: 100%;
+	height: 30px;
+	line-height: 30px;
+	bottom: 10px;
+	text-align: center;
+}
+.window-confirmBtn{
+	display: inline-block;
+	margin-right: 30px;
+	margin-bottom: 30px;
+}
+.window-promptBtn{
+	display: inline-block;
+	margin-right: 30px;
+	margin-bottom: 30px;
 }
 .window-skin-a.window_boundingBox{
 	border: 1px solid skyblue;
@@ -82,11 +111,11 @@
 	color: f0f0f0;
 	font-weight: bold;
 }
-.window-skin-a .window-btn{
+.window-skin-a .btn{
 	border: 1px solid #4bc19e;
     background: #4bc19e;
     color: #F9F9F9;
 }
-.window-skin-a .window-btn:hover{
+.window-skin-a .btn:hover{
 	background: #4bc19ec2;
 }
