--- a/Easy-Reader/src/assets/styles/global.scss
+++ b/Easy-Reader/src/assets/styles/global.scss
@@ -10,3 +10,28 @@ $fontSize: 37.5;
     justify-content: center;
     align-items: center;
 }
+.icon{
+    font-size: px2rem(20);
+    color: #666
+}
+.slide-down-enter, .slide-down-leave-to {
+    transform: translate3d(0, -100%, 0);
+}
+.slide-down-enter-to, .slide-down-leave, .slide-up-enter-to, .slide-up-leave {
+    transform: translate3d(0, 0, 0);
+}
+.slide-down-enter-active, .slide-down-leave-active, .slide-up-enter-active, .slide-up-leave-active  {
+    transition: all 0.2s linear
+}
+.slide-up-enter, .slide-up-leave-to {
+    transform: translate3d(0, px2rem(108), 0);
+}
+.fade-enter, .fade-leave-to {
+    opacity: 0;
+}
+.fade-enter-to, .fade-leave {
+    opacity: 1;
+}
+.fade-enter-active, .fade-leave-active {
+    transform: translate3d(-100%, 0, 0)
+}
