--- a/Easy-Reader/src/assets/styles/global.scss
+++ b/Easy-Reader/src/assets/styles/global.scss
@@ -33,5 +33,6 @@ $fontSize: 37.5;
     opacity: 1;
 }
 .fade-enter-active, .fade-leave-active {
-    transform: translate3d(-100%, 0, 0)
+    // transform: translate3d(-100%, 0, 0);
+    transition: all 0.2s linear
 }
