--- a/Easy-Reader/src/assets/styles/global.scss
+++ b/Easy-Reader/src/assets/styles/global.scss
@@ -17,11 +17,14 @@ $fontSize: 37.5;
 .slide-down-enter, .slide-down-leave-to {
     transform: translate3d(0, -100%, 0);
 }
-.slide-down-enter-to, .slide-down-leave, .slide-up-enter-to, .slide-up-leave {
+.slide-down-enter-to, .slide-down-leave, .slide-up-enter-to, .slide-up-leave
+.slide-right-enter-to, .slide-right-leave {
     transform: translate3d(0, 0, 0);
 }
-.slide-down-enter-active, .slide-down-leave-active, .slide-up-enter-active, .slide-up-leave-active  {
-    transition: all 0.2s linear
+.slide-down-enter-active, .slide-down-leave-active, .slide-up-enter-active, .slide-up-leave-active,
+.fade-enter-active, .fade-leave-active,
+.slide-right-enter-active, .slide-right-leave-active {
+    transition: all 0.2s linear;
 }
 .slide-up-enter, .slide-up-leave-to {
     transform: translate3d(0, px2rem(108), 0);
@@ -32,7 +35,7 @@ $fontSize: 37.5;
 .fade-enter-to, .fade-leave {
     opacity: 1;
 }
-.fade-enter-active, .fade-leave-active {
-    // transform: translate3d(-100%, 0, 0);
-    transition: all 0.2s linear
+.slide-right-enter, .slide-right-leave-to{
+    transform: translate3d(-100%, 0, 0);
 }
+
