--- a/node-mongodb/views/includes/head.jade
+++ b/node-mongodb/views/includes/head.jade
@@ -1,3 +1,4 @@
-link(rel="stylesheet", href="/bootstrap/dist/css/bootstrap.min.css")
-script(src="/jquery/dist/jquery.min.js")
-script(src="/bootstrap/dist/js/bootstrap.min.js")
+link(rel="stylesheet", href="/libs/bootstrap/dist/css/bootstrap.min.css")
+link(rel="stylesheet", href="/css/main.css")
+script(src="/libs/jquery/dist/jquery.min.js")
+script(src="/libs/bootstrap/dist/js/bootstrap.min.js")
