--- a/node-mongodb/views/pages/admin.jade
+++ b/node-mongodb/views/pages/admin.jade
@@ -1,7 +1,8 @@
 extends ../layout
 block content 
   .container
-    form.form-horizonal(action="admin/movie/new", method="post")
+    form.form-horizonal(action="/admin/movie/new", method="post")
+      input(type="hidden",name="movie[_id]",value="#{movie._id}")
       .form-group.row
         label.col-sm-2.col-form-label(for="inputTitle") 电影名字
         .col-sm-10
