--- a/node-mongodb/views/pages/admin.jade
+++ b/node-mongodb/views/pages/admin.jade
@@ -18,7 +18,7 @@ block content
       .form-group.row
         label.col-sm-2.col-form-label(for="inputLanguage") 语种
         .col-sm-10
-          input#inputLanguage.form-control(type="text", name="movie[country]", value="#{movie.country}")
+          input#inputLanguage.form-control(type="text", name="movie[language]", value="#{movie.language}")
       .form-group.row
         label.col-sm-2.col-form-label(for="inputPoster") 海报地址
         .col-sm-10
