--- a/node-mongodb/views/pages/detail.jade
+++ b/node-mongodb/views/pages/detail.jade
@@ -13,7 +13,7 @@ block content
           dt 国家
           dd=movie.country
           dt 上映年份
-          dd=movie.years
+          dd=movie.year
           dt 语言
           dd=movie.language
           dt 简介
