--- a/node-mongodb/views/pages/list.jade
+++ b/node-mongodb/views/pages/list.jade
@@ -7,8 +7,9 @@ block content
           th 电影名字
           th 导演
           th 国家 
+          th 语言
           th 上映年份  
-          //-th 录入时间
+          th 录入时间
           th 查看
           th 更新 
           th 删除
@@ -18,8 +19,9 @@ block content
               td #{item.title}
               td #{item.director}
               td #{item.country}
+              td #{item.language}
               td #{item.year}
-              //-td #{moment(item.mate.creatAt).format('MM/DD/YYYY')}
+              td #{moment(item.meta.updateAt).format('MM/DD/YYYY')}
               td: a(target="_blank",href="../movie/#{item._id}") 查看
               td: a(target="_blank",href="../admin/update/#{item._id}") 修改 
               td 
