--- a/node-mongodb/app/views/layout.jade
+++ b/node-mongodb/app/views/layout.jade
@@ -5,6 +5,6 @@ html
     title #{title}
     include ./includes/head
   body
-    include ./includes/header
+    //- include ./includes/header
     block content
     
