--- a/node-mongodb/app/views/pages/detail.jade
+++ b/node-mongodb/app/views/pages/detail.jade
@@ -4,6 +4,37 @@ block content
     .row
       .col-7
         embed(src="#{movie.flash}", allowFullScreen="true", quality="high", height="400", width="600", type="application/x-shockwave-flash")
+        .card.border-dark
+          .card-header
+            h5 评论区
+          .card-body
+            ul.list-group
+              each item in comments
+                li.list-group-item.list-group-item-action.flex-column.align-items-start.list-group-item-light
+                  .d-flex.w-100
+                    a.comment(href="#comments", data-cid=item._id,data-tid=item.from._id)
+                      img(src="/img/boy.svg", alt="头像")
+                    h4 #{item.from.name}
+                  h5.mb-1 #{item.content}
+                    ul.list-group
+                      li.list-group-item.list-group-item-action.flex-column.align-items-start.list-group-item-light
+                        .d-flex.w-100
+                          img(src="/img/boy.svg", alt="头像")
+                          h5.mb-1 用户名
+                        p.mb-1 Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.
+          hr
+          #comments.col-10.offset-1
+            form#commentForm(method='post', action='/user/comment')
+              input(type='hidden', name='comment[movie]', value=movie._id)
+              if user
+                  input(type='hidden', name='comment[from]', value=user._id)
+              .form-group
+                  textarea.form-control(name='comment[content]', row='3')
+              if user
+                  button.btn.btn-primary.btn-block(type='submit') 提交
+              else
+                  a.btn.btn-dark.btn-block(href='#', data-toggle='modal', data-target='#signinModal') 登录后评论 
+               
       .col-5
         dl.dl-horizontal
           dt 电影名字
@@ -18,6 +49,7 @@ block content
           dd=movie.language
           dt 简介
           dd=movie.summary 
+  script(src="/js/detail.js")
   
 
          
