--- a/node-mongodb/app/views/pages/admin.jade
+++ b/node-mongodb/app/views/pages/admin.jade
@@ -1,40 +1,54 @@
 extends ../layout
 block content 
   .container
-    form.form-horizonal(action="/admin/movie/new", method="post")
-      input(type="hidden",name="movie[_id]",value="#{movie._id}")
+    form.form-horizonal(action="/admin/movie", method="post")
+      if movie._id
+        input(type="hidden",name="movie[_id]",value=movie._id)
+      .form-group.row
+        label.col-sm-2.col-form-label(for="inputCategory") 电影分类
+        .col-sm-10
+          input#inputCategory.form-control(type="text", name="movie[categoryName]", value = movie.categoryName)
+        .form-check.form-check-inline
+          label.col-6.col-form-label(for="inputCategoryRadio") 分类选择
+          .col-2
+          each cat in categories
+            if movie._id
+              input#inputCategoryRadio.form-check-input(type="radio", name="movie[category]", value="#{cat._id}" checked=cat.id.toString()==movie.category.toString())
+            else 
+              input#inputCategoryRadio.form-check-input(type="radio", name="movie[category]", value="#{cat._id}")
+            label.col-4.col-form-label(for="inputCategoryRadio") #{cat.name}
       .form-group.row
         label.col-sm-2.col-form-label(for="inputTitle") 电影名字
         .col-sm-10
-          input#inputTitle.form-control(type="text", name="movie[title]", value="#{movie.title}")
+          input#inputTitle.form-control(type="text", name="movie[title]", value=movie.title)
       .form-group.row
         label.col-sm-2.col-form-label(for="inputDirector") 电影导演
         .col-sm-10
-          input#inputDirector.form-control(type="text", name="movie[director]", value="#{movie.director}")
+          input#inputDirector.form-control(type="text", name="movie[director]", value=movie.director)
       .form-group.row
         label.col-sm-2.col-form-label(for="inputCountry") 电影国家
         .col-sm-10
-          input#inputCountry.form-control(type="text", name="movie[country]", value="#{movie.country}")
+          input#inputCountry.form-control(type="text", name="movie[country]", value=movie.country)
       .form-group.row
         label.col-sm-2.col-form-label(for="inputLanguage") 语种
         .col-sm-10
-          input#inputLanguage.form-control(type="text", name="movie[language]", value="#{movie.language}")
+          input#inputLanguage.form-control(type="text", name="movie[language]", value=movie.language)
       .form-group.row
         label.col-sm-2.col-form-label(for="inputPoster") 海报地址
         .col-sm-10
-          input#inputPoster.form-control(type="text", name="movie[poster]", value="#{movie.poster}")
+          input#inputPoster.form-control(type="text", name="movie[poster]", value=movie.poster)
       .form-group.row
         label.col-sm-2.col-form-label(for="inputFlash") 片源地址
         .col-sm-10
-          input#inputFlash.form-control(type="text", name="movie[flash]", value="#{movie.flash}")
+          input#inputFlash.form-control(type="text", name="movie[flash]", value=movie.flash)
       .form-group.row
         label.col-sm-2.col-form-label(for="inputYear") 上映年代
         .col-sm-10
-          input#inputYear.form-control(type="text", name="movie[year]", value="#{movie.year}")
+          input#inputYear.form-control(type="text", name="movie[year]", value=movie.year)
       .form-group.row
         label.col-sm-2.col-form-label(for="inputSummary") 电影简介
         .col-sm-10
-          input#inputSummary.form-control(type="text", name="movie[summary]", value="#{movie.summary}")
+          input#inputSummary.form-control(type="text", name="movie[summary]", value=movie.summary)
       .form-group.row
         .col-sm-offset-2.col-sm-10
         button.btn.btn-primary.btn-lg(type="submit") 录 入
