--- a/node-mongodb/app/views/pages/detail.jade
+++ b/node-mongodb/app/views/pages/detail.jade
@@ -64,6 +64,9 @@ block content
           dd=movie.language
           dt 简介
           dd=movie.summary 
+    .row
+      .col-12 &nbsp;
+      .col-12 &nbsp;
   script(src="/js/detail.js")
   
 
