--- a/node-mongodb/app/views/pages/index.jade
+++ b/node-mongodb/app/views/pages/index.jade
@@ -1,8 +1,8 @@
 extends ../layout
 block content 
-  .container
+  .container.my-md-3
     each cat in categories
-      .card
+      .card.my-md-3
         .card-header
           h3 #{cat.name}
         .card-body
