--- a/node-mongodb/app/views/pages/admin.jade
+++ b/node-mongodb/app/views/pages/admin.jade
@@ -1,6 +1,6 @@
 extends ../layout
 block content 
-  .container
+  .container.my-xl-5
     form.form-horizonal(action="/admin/movie", method="post")
       if movie._id
         input(type="hidden",name="movie[_id]",value=movie._id)
@@ -53,7 +53,10 @@ block content
         label.col-sm-2.col-form-label(for="inputSummary") 电影简介
         .col-sm-10
           input#inputSummary.form-control(type="text", name="movie[summary]", value=movie.summary)
-      .form-group.row
-        .col-sm-offset-2.col-sm-10
-        button.btn.btn-primary.btn-lg(type="submit") 录 入
+      .form-group.row.justify-content-center
+        .col-sm-offset-2.col-sm-4
+          button.btn.btn-primary.btn-block(type="submit") 录 入
+    .row
+      .col-12 &nbsp;
+      .col-12 &nbsp;
   script(src="/js/admin.js")
