--- a/搜索框/css/mySearch.css
+++ b/搜索框/css/mySearch.css
@@ -6,7 +6,7 @@
 
 body{
 	
-	background-image: url(http://pgdwgiv7s.bkt.clouddn.com/%E7%85%A7%E7%89%87%E5%A2%99/blog648ac377gy1fw3ck0h513j21jk0v9kjl.jpg);
+	background-image: url(imooc.niuy.xyz/%E7%85%A7%E7%89%87%E5%A2%99/blog648ac377gy1fw3ck0h513j21jk0v9kjl.jpg);
 	background-size: cover;
 	
 	overflow: hidden;
