--- a/blog/css/main.css
+++ b/blog/css/main.css
@@ -294,7 +294,7 @@ ul.share-group{
 	text-align: center;
 }
 .main-wrapper{
-	background: url(imooc.niuy.xyz/blog/banner.jpg);
+	background: url(http://imooc.niuy.xyz/blog/banner.jpg);
 	background-attachment: fixed;
 	background-repeat:no-repeat;	
 	background-size:cover;
