--- a/作业/css/mycss.css
+++ b/作业/css/mycss.css
@@ -177,7 +177,7 @@ nav #logo {
   position: relative;
   height: 320px;
   width: 100%;
-  background: url(imooc.niuy.xyz/%E4%BD%9C%E4%B8%9A/banner.jpg);
+  background: url(http://imooc.niuy.xyz/%E4%BD%9C%E4%B8%9A/banner.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -360,7 +360,7 @@ nav #logo {
 }
 
 .log-wrapper {
-  background: url(imooc.niuy.xyz/%E7%85%A7%E7%89%87%E5%A2%99/blog648ac377gy1fw3cjxrz3oj21hc0u07rf.jpg);
+  background: url(http://imooc.niuy.xyz/%E7%85%A7%E7%89%87%E5%A2%99/blog648ac377gy1fw3cjxrz3oj21hc0u07rf.jpg);
   /*background-attachment: fixed;*/
   background-repeat: no-repeat;
   background-size: cover;
